--- a/app/src/components/homepage/vectors-custom.css
+++ b/app/src/components/homepage/vectors-custom.css
@@ -25,6 +25,23 @@
     width: 148px; 
     height: 116px; 
     margin-top: -175px;
-    margin-left: -75px; 
+    margin-left: -55px; 
+  }
+
+  #line1 {
+    height: 20px; 
+    margin-left: 260px; 
+    margin-top: -100px; 
+  }
+
+  #line2 {
+    height: 20px; 
+    margin-left: 280px; 
+    margin-top: -20px; 
+  }
+
+  #line3 {
+    width: 20px; 
+    margin-left: 290px; 
   }
 }
